clouddm-plugins/clouddm-features/plus-faker/src/main/java/com/clougence/clouddm/faker/config/dsl/antlr/TypeProcessorDSLParser.java
// Generated from TypeProcessorDSLParser.g4 by ANTLR 4.9.3
package com.clougence.clouddm.faker.config.dsl.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TypeProcessorDSLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, COMMENT1=2, COMMENT2=3, COMMENT3=4, EOL=5, DEFINE=6, ALIAS=7, FOLLOW=8, 
		THROW=9, TRUE=10, FALSE=11, NULL=12, SET=13, APPEND=14, SEM=15, ALL=16, 
		COLON=17, COMMA=18, LBT=19, RBT=20, LSBT=21, RSBT=22, ENV=23, OCBR=24, 
		CCBR=25, STRING=26, HEX_NUM=27, OCT_NUM=28, BIT_NUM=29, SIZE=30, INTEGER_NUM=31, 
		DECIMAL_NUM=32, IDENTIFIER=33, TYPE=34;
	public static final int
		RULE_rootInstSet = 0, RULE_defineInst = 1, RULE_defineAlias = 2, RULE_defineConf = 3, 
		RULE_typeSetInst = 4, RULE_typeInst = 5, RULE_colTypeName = 6, RULE_colTypeConf = 7, 
		RULE_flowName = 8, RULE_anyValue = 9, RULE_funcCall = 10, RULE_baseValue = 11, 
		RULE_extValue = 12, RULE_envValue = 13, RULE_listValue = 14, RULE_objectValue = 15, 
		RULE_objectItem = 16, RULE_idStr = 17;
	private static String[] makeRuleNames() {
		return new String[] {
			"rootInstSet", "defineInst", "defineAlias", "defineConf", "typeSetInst", 
			"typeInst", "colTypeName", "colTypeConf", "flowName", "anyValue", "funcCall", 
			"baseValue", "extValue", "envValue", "listValue", "objectValue", "objectItem", 
			"idStr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, "'define'", "'alias'", "'follow'", 
			"'throw'", "'true'", "'false'", "'null'", "'='", "'+='", "';'", "'*'", 
			"':'", "','", "'('", "')'", "'['", "']'", "'${'", "'{'", "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "COMMENT1", "COMMENT2", "COMMENT3", "EOL", "DEFINE", "ALIAS", 
			"FOLLOW", "THROW", "TRUE", "FALSE", "NULL", "SET", "APPEND", "SEM", "ALL", 
			"COLON", "COMMA", "LBT", "RBT", "LSBT", "RSBT", "ENV", "OCBR", "CCBR", 
			"STRING", "HEX_NUM", "OCT_NUM", "BIT_NUM", "SIZE", "INTEGER_NUM", "DECIMAL_NUM", 
			"IDENTIFIER", "TYPE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TypeProcessorDSLParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TypeProcessorDSLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class RootInstSetContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(TypeProcessorDSLParser.EOF, 0); }
		public DefineInstContext defineInst() {
			return getRuleContext(DefineInstContext.class,0);
		}
		public List<TypeSetInstContext> typeSetInst() {
			return getRuleContexts(TypeSetInstContext.class);
		}
		public TypeSetInstContext typeSetInst(int i) {
			return getRuleContext(TypeSetInstContext.class,i);
		}
		public RootInstSetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rootInstSet; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeProcessorDSLParserListener ) ((TypeProcessorDSLParserListener)listener).enterRootInstSet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeProcessorDSLParserListener ) ((TypeProcessorDSLParserListener)listener).exitRootInstSet(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeProcessorDSLParserVisitor ) return ((TypeProcessorDSLParserVisitor<? extends T>)visitor).visitRootInstSet(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RootInstSetContext rootInstSet() throws RecognitionException {
		RootInstSetContext _localctx = new RootInstSetContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_rootInstSet);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DEFINE) {
				{
				setState(36);
				defineInst();
				}
			}

			setState(42);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LSBT) {
				{
				{
				setState(39);
				typeSetInst();
				}
				}
				setState(44);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(45);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefineInstContext extends ParserRuleContext {
		public TerminalNode DEFINE() { return getToken(TypeProcessorDSLParser.DEFINE, 0); }
		public IdStrContext idStr() {
			return getRuleContext(IdStrContext.class,0);
		}
		public TerminalNode ALIAS() { return getToken(TypeProcessorDSLParser.ALIAS, 0); }
		public TerminalNode LSBT() { return getToken(TypeProcessorDSLParser.LSBT, 0); }
		public DefineAliasContext defineAlias() {
			return getRuleContext(DefineAliasContext.class,0);
		}
		public TerminalNode RSBT() { return getToken(TypeProcessorDSLParser.RSBT, 0); }
		public TerminalNode OCBR() { return getToken(TypeProcessorDSLParser.OCBR, 0); }
		public TerminalNode CCBR() { return getToken(TypeProcessorDSLParser.CCBR, 0); }
		public List<DefineConfContext> defineConf() {
			return getRuleContexts(DefineConfContext.class);
		}
		public DefineConfContext defineConf(int i) {
			return getRuleContext(DefineConfContext.class,i);
		}
		public DefineInstContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defineInst; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeProcessorDSLParserListener ) ((TypeProcessorDSLParserListener)listener).enterDefineInst(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeProcessorDSLParserListener ) ((TypeProcessorDSLParserListener)listener).exitDefineInst(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeProcessorDSLParserVisitor ) return ((TypeProcessorDSLParserVisitor<? extends T>)visitor).visitDefineInst(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefineInstContext defineInst() throws RecognitionException {
		DefineInstContext _localctx = new DefineInstContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_defineInst);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			match(DEFINE);
			setState(48);
			idStr();
			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ALIAS) {
				{
				setState(49);
				match(ALIAS);
				setState(50);
				match(LSBT);
				setState(51);
				defineAlias();
				setState(52);
				match(RSBT);
				}
			}

			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OCBR) {
				{
				setState(56);
				match(OCBR);
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STRING) | (1L << IDENTIFIER) | (1L << TYPE))) != 0)) {
					{
					{
					setState(57);
					defineConf();
					}
					}
					setState(62);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(63);
				match(CCBR);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefineAliasContext extends ParserRuleContext {
		public List<IdStrContext> idStr() {
			return getRuleContexts(IdStrContext.class);
		}
		public IdStrContext idStr(int i) {
			return getRuleContext(IdStrContext.class,i);
		}
		public DefineAliasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defineAlias; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeProcessorDSLParserListener ) ((TypeProcessorDSLParserListener)listener).enterDefineAlias(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeProcessorDSLParserListener ) ((TypeProcessorDSLParserListener)listener).exitDefineAlias(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeProcessorDSLParserVisitor ) return ((TypeProcessorDSLParserVisitor<? extends T>)visitor).visitDefineAlias(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefineAliasContext defineAlias() throws RecognitionException {
		DefineAliasContext _localctx = new DefineAliasContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_defineAlias);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(66);
				idStr();
				}
				}
				setState(69); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STRING) | (1L << IDENTIFIER) | (1L << TYPE))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefineConfContext extends ParserRuleContext {
		public IdStrContext idStr() {
			return getRuleContext(IdStrContext.class,0);
		}
		public TerminalNode SET() { return getToken(TypeProcessorDSLParser.SET, 0); }
		public AnyValueContext anyValue() {
			return getRuleContext(AnyValueContext.class,0);
		}
		public TerminalNode SEM() { return getToken(TypeProcessorDSLParser.SEM, 0); }
		public DefineConfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defineConf; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeProcessorDSLParserListener ) ((TypeProcessorDSLParserListener)listener).enterDefineConf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeProcessorDSLParserListener ) ((TypeProcessorDSLParserListener)listener).exitDefineConf(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeProcessorDSLParserVisitor ) return ((TypeProcessorDSLParserVisitor<? extends T>)visitor).visitDefineConf(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefineConfContext defineConf() throws RecognitionException {
		DefineConfContext _localctx = new DefineConfContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_defineConf);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			idStr();
			setState(72);
			match(SET);
			setState(73);
			anyValue();
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEM) {
				{
				setState(74);
				match(SEM);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeSetInstContext extends ParserRuleContext {
		public List<TypeInstContext> typeInst() {
			return getRuleContexts(TypeInstContext.class);
		}
		public TypeInstContext typeInst(int i) {
			return getRuleContext(TypeInstContext.class,i);
		}
		public List<TerminalNode> SEM() { return getTokens(TypeProcessorDSLParser.SEM); }
		public TerminalNode SEM(int i) {
			return getToken(TypeProcessorDSLParser.SEM, i);
		}
		public TypeSetInstContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeSetInst; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeProcessorDSLParserListener ) ((TypeProcessorDSLParserListener)listener).enterTypeSetInst(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeProcessorDSLParserListener ) ((TypeProcessorDSLParserListener)listener).exitTypeSetInst(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeProcessorDSLParserVisitor ) return ((TypeProcessorDSLParserVisitor<? extends T>)visitor).visitTypeSetInst(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeSetInstContext typeSetInst() throws RecognitionException {
		TypeSetInstContext _localctx = new TypeSetInstContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_typeSetInst);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(81); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(77);
					typeInst();
					setState(79);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==SEM) {
						{
						setState(78);
						match(SEM);
						}
					}

					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(83); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeInstContext extends ParserRuleContext {
		public ColTypeNameContext colTypeName() {
			return getRuleContext(ColTypeNameContext.class,0);
		}
		public TerminalNode FOLLOW() { return getToken(TypeProcessorDSLParser.FOLLOW, 0); }
		public FlowNameContext flowName() {
			return getRuleContext(FlowNameContext.class,0);
		}
		public TerminalNode THROW() { return getToken(TypeProcessorDSLParser.THROW, 0); }
		public TerminalNode STRING() { return getToken(TypeProcessorDSLParser.STRING, 0); }
		public List<ColTypeConfContext> colTypeConf() {
			return getRuleContexts(ColTypeConfContext.class);
		}
		public ColTypeConfContext colTypeConf(int i) {
			return getRuleContext(ColTypeConfContext.class,i);
		}
		public TypeInstContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeInst; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeProcessorDSLParserListener ) ((TypeProcessorDSLParserListener)listener).enterTypeInst(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeProcessorDSLParserListener ) ((TypeProcessorDSLParserListener)listener).exitTypeInst(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeProcessorDSLParserVisitor ) return ((TypeProcessorDSLParserVisitor<? extends T>)visitor).visitTypeInst(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeInstContext typeInst() throws RecognitionException {
		TypeInstContext _localctx = new TypeInstContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_typeInst);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			colTypeName();
			setState(95);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case STRING:
			case IDENTIFIER:
			case TYPE:
				{
				setState(87); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(86);
					colTypeConf();
					}
					}
					setState(89); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STRING) | (1L << IDENTIFIER) | (1L << TYPE))) != 0) );
				}
				break;
			case FOLLOW:
				{
				{
				setState(91);
				match(FOLLOW);
				setState(92);
				flowName();
				}
				}
				break;
			case THROW:
				{
				{
				setState(93);
				match(THROW);
				setState(94);
				match(STRING);
				}
				}
				break;
			case EOF:
			case SEM:
			case LSBT:
				break;
			default:
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ColTypeNameContext extends ParserRuleContext {
		public TerminalNode LSBT() { return getToken(TypeProcessorDSLParser.LSBT, 0); }
		public TerminalNode RSBT() { return getToken(TypeProcessorDSLParser.RSBT, 0); }
		public TerminalNode ALL() { return getToken(TypeProcessorDSLParser.ALL, 0); }
		public IdStrContext idStr() {
			return getRuleContext(IdStrContext.class,0);
		}
		public ColTypeNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_colTypeName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeProcessorDSLParserListener ) ((TypeProcessorDSLParserListener)listener).enterColTypeName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeProcessorDSLParserListener ) ((TypeProcessorDSLParserListener)listener).exitColTypeName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeProcessorDSLParserVisitor ) return ((TypeProcessorDSLParserVisitor<? extends T>)visitor).visitColTypeName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ColTypeNameContext colTypeName() throws RecognitionException {
		ColTypeNameContext _localctx = new ColTypeNameContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_colTypeName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(LSBT);
			setState(100);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ALL:
				{
				setState(98);
				match(ALL);
				}
				break;
			case STRING:
			case IDENTIFIER:
			case TYPE:
				{
				setState(99);
				idStr();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(102);
			match(RSBT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ColTypeConfContext extends ParserRuleContext {
		public IdStrContext idStr() {
			return getRuleContext(IdStrContext.class,0);
		}
		public AnyValueContext anyValue() {
			return getRuleContext(AnyValueContext.class,0);
		}
		public TerminalNode SET() { return getToken(TypeProcessorDSLParser.SET, 0); }
		public TerminalNode APPEND() { return getToken(TypeProcessorDSLParser.APPEND, 0); }
		public ColTypeConfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_colTypeConf; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeProcessorDSLParserListener ) ((TypeProcessorDSLParserListener)listener).enterColTypeConf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeProcessorDSLParserListener ) ((TypeProcessorDSLParserListener)listener).exitColTypeConf(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeProcessorDSLParserVisitor ) return ((TypeProcessorDSLParserVisitor<? extends T>)visitor).visitColTypeConf(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ColTypeConfContext colTypeConf() throws RecognitionException {
		ColTypeConfContext _localctx = new ColTypeConfContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_colTypeConf);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			idStr();
			setState(105);
			_la = _input.LA(1);
			if ( !(_la==SET || _la==APPEND) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(106);
			anyValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FlowNameContext extends ParserRuleContext {
		public ColTypeNameContext colTypeName() {
			return getRuleContext(ColTypeNameContext.class,0);
		}
		public FlowNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_flowName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeProcessorDSLParserListener ) ((TypeProcessorDSLParserListener)listener).enterFlowName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeProcessorDSLParserListener ) ((TypeProcessorDSLParserListener)listener).exitFlowName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeProcessorDSLParserVisitor ) return ((TypeProcessorDSLParserVisitor<? extends T>)visitor).visitFlowName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FlowNameContext flowName() throws RecognitionException {
		FlowNameContext _localctx = new FlowNameContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_flowName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			colTypeName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnyValueContext extends ParserRuleContext {
		public ExtValueContext extValue() {
			return getRuleContext(ExtValueContext.class,0);
		}
		public BaseValueContext baseValue() {
			return getRuleContext(BaseValueContext.class,0);
		}
		public ListValueContext listValue() {
			return getRuleContext(ListValueContext.class,0);
		}
		public ObjectValueContext objectValue() {
			return getRuleContext(ObjectValueContext.class,0);
		}
		public EnvValueContext envValue() {
			return getRuleContext(EnvValueContext.class,0);
		}
		public FuncCallContext funcCall() {
			return getRuleContext(FuncCallContext.class,0);
		}
		public AnyValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_anyValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeProcessorDSLParserListener ) ((TypeProcessorDSLParserListener)listener).enterAnyValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeProcessorDSLParserListener ) ((TypeProcessorDSLParserListener)listener).exitAnyValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeProcessorDSLParserVisitor ) return ((TypeProcessorDSLParserVisitor<? extends T>)visitor).visitAnyValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AnyValueContext anyValue() throws RecognitionException {
		AnyValueContext _localctx = new AnyValueContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_anyValue);
		try {
			setState(116);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(110);
				extValue();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(111);
				baseValue();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(112);
				listValue();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(113);
				objectValue();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(114);
				envValue();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(115);
				funcCall();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncCallContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(TypeProcessorDSLParser.IDENTIFIER, 0); }
		public TerminalNode LBT() { return getToken(TypeProcessorDSLParser.LBT, 0); }
		public TerminalNode RBT() { return getToken(TypeProcessorDSLParser.RBT, 0); }
		public List<AnyValueContext> anyValue() {
			return getRuleContexts(AnyValueContext.class);
		}
		public AnyValueContext anyValue(int i) {
			return getRuleContext(AnyValueContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(TypeProcessorDSLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(TypeProcessorDSLParser.COMMA, i);
		}
		public FuncCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcCall; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeProcessorDSLParserListener ) ((TypeProcessorDSLParserListener)listener).enterFuncCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeProcessorDSLParserListener ) ((TypeProcessorDSLParserListener)listener).exitFuncCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeProcessorDSLParserVisitor ) return ((TypeProcessorDSLParserVisitor<? extends T>)visitor).visitFuncCall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncCallContext funcCall() throws RecognitionException {
		FuncCallContext _localctx = new FuncCallContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_funcCall);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(IDENTIFIER);
			setState(119);
			match(LBT);
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TRUE) | (1L << FALSE) | (1L << NULL) | (1L << LSBT) | (1L << ENV) | (1L << OCBR) | (1L << STRING) | (1L << HEX_NUM) | (1L << OCT_NUM) | (1L << BIT_NUM) | (1L << SIZE) | (1L << INTEGER_NUM) | (1L << DECIMAL_NUM) | (1L << IDENTIFIER) | (1L << TYPE))) != 0)) {
				{
				setState(120);
				anyValue();
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(121);
					match(COMMA);
					setState(122);
					anyValue();
					}
					}
					setState(127);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}
